# Pairee

./: .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  SECURITY.md  SUPPORT.md  agents.md  build.rs  changelog.html  index.html  install.ps1  install.sh  installer.iss  llms.txt  main.lua  manifest.toml  norton_commander_features.md  plugins.html  robots.txt  run.bat  run.sh  sitemap.xml  style.css  translations.js
.agents/: AGENTS.md
.agents/skills/changelog-helper/: SKILL.md
.agents/skills/localize-helper/: SKILL.md
.agents/skills/settings-helper/: SKILL.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  20_feature_request.yml  config.yml
.github/workflows/: check.yml  release.yml  winget.yml
css/: base.css  changelog.css  index.css  plugins.css
docker/: Dockerfile  Dockerfile.namespace  docker-compose.yml  docker_ssh_testing.md  entrypoint.sh
docs/: CHANGELOG.md  PRIVACY.md  README.md  UNRELEASED.md  plugin-dev-guide-es.md  plugin-dev-guide.md  winget-submission-guide.md
docs/technical/: architecture_en.md  architecture_es.md  installer_guide.md  microsoft-store-publishing.md  plugin-registry-spec.md  plugin-roadmap-es.md  plugin-roadmap.md  plugin-system-design-es.md  plugin-system-design.md  transfer-engine-design.md
docs/temp/: implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan2.md  task.md  task.md.metadata.json
help/: configuration_details_en.md  configuration_details_es.md  en.md  features_en.md  features_es.md  keyboard_shortcuts_en.md  ssh_sftp_es.md  user_guide_en.md  user_guide_es.md
help/en/: configuration_details.md  features.md  git_integration.md  keyboard_shortcuts.md  plugins.md  ssh_sftp.md  user_guide.md
help/es/: configuration_details.md  features.md  git_integration.md  keyboard_shortcuts.md  plugins.md  ssh_sftp.md  user_guide.md
img/: pairee_logo2.af
js/: changelog.js  plugins.js  translations.js
keymaps/: neovim.toml  norton.toml  vscode.toml
lang/: en.toml  es.json  es.toml
manifests/linux/: pairee.desktop
manifests/msix/: AppxManifest.xml
manifests/windows/: pairee.rc
manifests/winget/: FittyAr.Pairee.installer.yaml  FittyAr.Pairee.locale.en-US.yaml  FittyAr.Pairee.locale.es-ES.yaml  FittyAr.Pairee.yaml  README.md
plugins_dev_dir/code-preview.pairee/: main.lua  manifest.toml
plugins_dev_dir/code-preview.pairee/help/: en.md
plugins_dev_dir/code-preview.pairee/lang/: en.toml
plugins_dev_dir/fzf.pairee/: main.lua  manifest.toml
plugins_dev_dir/fzf.pairee/help/: en.md
plugins_dev_dir/fzf.pairee/lang/: en.toml
plugins_dev_dir/zoxide.pairee/: main.lua  manifest.toml
plugins_dev_dir/zoxide.pairee/help/: en.md
plugins_dev_dir/zoxide.pairee/lang/: en.toml
registry/: blocklist.toml  index.toml
scripts/: bump_version.ps1  bump_version.sh  clean_translations.py  extract_changelog.ps1  extract_changelog.sh
src/: main.rs
src/app/: actions.rs  app.rs  context.rs  input.rs  input_popup.rs  menu_handler.rs  mod.rs  screen_input.rs  state.rs  sys_helpers.rs
src/app/actions/: exec.rs  fs_ops.rs  mod.rs  navigation.rs  ui_settings.rs
src/app/app/: background.rs  events.rs  mod.rs  updates.rs
src/app/input_popup/: about.rs  apply_command.rs  archive_commands.rs  color_groups.rs  compress.rs  confirm_dialogs.rs  copy.rs  copy_filter.rs  copy_progress.rs  delete.rs  dismiss_only.rs  drive_select.rs  editor.rs  file_associations.rs  file_attributes.rs  file_filter.rs  files_highlighting.rs  git_commit_prompt.rs  git_confirm_checkout.rs  git_new_popups.rs  git_panel.rs  help.rs  history_list.rs  hotlist.rs  menu.rs  mkdir.rs  mod.rs  plugin_dialogs.rs  plugin_menu.rs  rename.rs  rename_move.rs  save_setup.rs  screens_menu.rs  search.rs  sort_modes.rs  ssh_connect.rs  task_list.rs  transfer_panel.rs  tree_view.rs  update_popup.rs  (+3 more)
src/app/screen_input/: editor.rs  mod.rs  viewer.rs
src/app/state/: glob.rs  history.rs  mod.rs  panel.rs  quick_view.rs  refresh.rs  screens.rs  transfer_state.rs  types.rs
src/app/sys_helpers/: bookmarks.rs  config.rs  editor.rs  mod.rs  process.rs  storage.rs  ui_helpers.rs
src/config/: associations.rs  history.rs  keybindings.rs  localization.rs  mod.rs  paths.rs  settings.rs  theme.rs
src/config/localization/: discovery.rs  en.rs  loader.rs  mod.rs  tests.rs  translator.rs  types.rs
src/fs/: apply_cmd.rs  attrs.rs  compare.rs  delete.rs  descriptions.rs  elevated_helper.rs  entry.rs  external_tools.rs  link.rs  list.rs  mkdir.rs  mod.rs  ops.rs  ops_worker.rs  privileges.rs  rename_move.rs  search.rs  ssh.rs  wipe.rs
src/fs/ops_worker/: compress.rs  copy.rs  copy_move.rs  delete.rs  extract.rs  helper.rs  mod.rs  move_rename.rs  wipe.rs
src/fs/transfer/: conflict.rs  direct_io.rs  engine.rs  events.rs  filter.rs  history.rs  job.rs  metadata.rs  mod.rs  network.rs  options.rs  pipeline.rs  post_action.rs  queue.rs  report.rs  worker.rs
src/git/: branches.rs  checkout.rs  commit.rs  diff.rs  log.rs  merge.rs  mod.rs  remote.rs  repo.rs  reset.rs  stage.rs  stash.rs  status.rs  tests.rs
src/keybindings/: actions.rs  mod.rs  preset.rs  resolver.rs
src/plugin/: developer_tool.rs  hooks.rs  loader.rs  macros.rs  manager.rs  mod.rs  registry.rs  sandbox.rs  updater.rs
src/plugin/developer_tool/: init.rs  lint.rs  mod.rs  package.rs  submit.rs
src/plugin/manager/: dispatch_actions.rs  dispatcher.rs  manager.rs  mod.rs  request.rs  snapshot.rs
src/plugin/runtime/: mod.rs  runtime.rs  standard.rs
src/plugin/types/: cha.rs  error.rs  file.rs  mod.rs  path.rs  url.rs
src/terminal/: backend.rs  events.rs  mod.rs  x11_poll.rs
src/ui/: cli.rs  fkeys.rs  highlight.rs  hotkey.rs  layout.rs  menu.rs  mod.rs  panel.rs  popup.rs  quickview.rs  theme_apply.rs  viewer.rs
src/ui/menu/: commands.rs  files.rs  left.rs  left_sort.rs  left_view.rs  mod.rs  options.rs  right.rs  right_sort.rs  right_view.rs  types.rs
src/update/: checker.rs  detect.rs  downloader.rs  installer.rs  mod.rs
(+170 files in other folders)
