[package]
name = "pairee"
version = "0.1.7"
edition = "2024"

[dependencies]
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "time"] }
tar = "0.4.46"
flate2 = "1.1.9"
sevenz-rust = "0.6.1"
pulldown-cmark = "0.11"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls"] }
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[package.metadata.deb]
name = "pairee"
maintainer = "FittyAr <10284757+FittyAr@users.noreply.github.com>"
license-file = ["LICENSE", "4"]
depends = "$default"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pairee", "usr/bin/pairee", "755"],
    ["lang/*", "usr/share/pairee/lang/", "644"],
    ["help/*", "usr/share/pairee/help/", "644"],
]

[package.metadata.generate-rpm]
name = "pairee"
summary = "A sleek, dual-panel terminal file manager"
description = "A modern Rust clone of Norton Commander with dual-panel layout, themes, and full mouse support."
license = "MIT"
categories = ["Applications/System"]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/pairee", dest = "/usr/bin/pairee", mode = "755" },
    { source = "lang/*", dest = "/usr/share/pairee/lang/", mode = "644" },
    { source = "help/*", dest = "/usr/share/pairee/help/", mode = "644" },
]










