[package]
name = "pairee"
version = "0.6.1"
edition = "2024"
default-run = "pairee"

[dependencies]
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "time"] }
tar = "0.4.46"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
sevenz-rust = "0.6.1"
pulldown-cmark = "0.13"
image = "0.25.10"
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }


[dev-dependencies]
tempfile = "3.27"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "json"] }
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
ssh2 = { version = "0.9" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[package.metadata.deb]
name = "pairee"
maintainer = "FittyAr <10284757+FittyAr@users.noreply.github.com>"
license-file = ["LICENSE", "4"]
depends = "$default"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pairee", "usr/bin/pairee", "755"],
    ["lang/*", "usr/share/pairee/lang/", "644"],
    ["help/*", "usr/share/pairee/help/", "644"],
    ["docs/technical/*", "usr/share/pairee/docs/technical/", "644"],
    ["keymaps/*", "usr/share/pairee/keymaps/", "644"],
    ["manifests/linux/pairee.desktop", "usr/share/applications/pairee.desktop", "644"],
    ["img/pairee_logo.svg", "usr/share/icons/hicolor/scalable/apps/pairee.svg", "644"],
    ["manifests/msix/Assets/Square150x150Logo.png", "usr/share/pixmaps/pairee.png", "644"],
]

[package.metadata.generate-rpm]
name = "pairee"
summary = "A sleek, dual-panel terminal file manager"
description = "A modern Rust clone of Norton Commander with dual-panel layout, themes, and full mouse support."
license = "GPLv3"
categories = ["Applications/System"]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/pairee", dest = "/usr/bin/pairee", mode = "755" },
    { source = "lang/*", dest = "/usr/share/pairee/lang/", mode = "644" },
    { source = "help/*", dest = "/usr/share/pairee/help/", mode = "644" },
    { source = "docs/technical/*", dest = "/usr/share/pairee/docs/technical/", mode = "644" },
    { source = "keymaps/*", dest = "/usr/share/pairee/keymaps/", mode = "644" },
    { source = "manifests/linux/pairee.desktop", dest = "/usr/share/applications/pairee.desktop", mode = "644" },
    { source = "img/pairee_logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/pairee.svg", mode = "644" },
    { source = "manifests/msix/Assets/Square150x150Logo.png", dest = "/usr/share/pixmaps/pairee.png", mode = "644" },
]

[build-dependencies]
embed-resource = "2.5"

