[package]
name = "pairee"
version = "0.7.1"
edition = "2024"
description = "A sleek, modern dual-panel terminal file manager written in Rust"
default-run = "pairee"

[dependencies]
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["deflate", "time"] }
tar = "0.4.46"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
sevenz-rust = "0.6.1"
pulldown-cmark = "0.13"
image = "0.25.10"
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2", "https"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
mlua = { version = "0.9.9", features = ["lua54", "vendored", "serialize", "async", "send"] }
percent-encoding = "2.3"
blake3 = "1.5.4"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
crc32fast = "1.4.2"
uuid = { version = "1.10.0", features = ["v4"] }
filetime = "0.2.25"
bytesize = "1.3.0"



[dev-dependencies]
tempfile = "3.27"

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "json"] }
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Memory", "Win32_Foundation"] }
ssh2 = { version = "0.9" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

[package.metadata.deb]
name = "pairee"
maintainer = "FittyAr <10284757+FittyAr@users.noreply.github.com>"
license-file = ["LICENSE"]
depends = "$default"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pairee", "usr/bin/pairee", "755"],
    ["lang/*", "usr/share/pairee/lang/", "644"],
    ["help/en/*", "usr/share/pairee/help/en/", "644"],
    ["help/es/*", "usr/share/pairee/help/es/", "644"],
    ["keymaps/*", "usr/share/pairee/keymaps/", "644"],
    ["manifests/linux/pairee.desktop", "usr/share/applications/pairee.desktop", "644"],
    ["img/pairee_logo.svg", "usr/share/icons/hicolor/scalable/apps/pairee.svg", "644"],
    ["manifests/msix/Assets/Square150x150Logo.png", "usr/share/pixmaps/pairee.png", "644"],
]

[package.metadata.generate-rpm]
name = "pairee"
summary = "A sleek, dual-panel terminal file manager"
description = "A modern Rust clone of Norton Commander with dual-panel layout, themes, and full mouse support."
license = "GPLv3"
categories = ["Applications/System"]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/pairee", dest = "/usr/bin/pairee", mode = "755" },
    { source = "lang/*", dest = "/usr/share/pairee/lang/", mode = "644" },
    { source = "help/en/*", dest = "/usr/share/pairee/help/en/", mode = "644" },
    { source = "help/es/*", dest = "/usr/share/pairee/help/es/", mode = "644" },
    { source = "keymaps/*", dest = "/usr/share/pairee/keymaps/", mode = "644" },
    { source = "manifests/linux/pairee.desktop", dest = "/usr/share/applications/pairee.desktop", mode = "644" },
    { source = "img/pairee_logo.svg", dest = "/usr/share/icons/hicolor/scalable/apps/pairee.svg", mode = "644" },
    { source = "manifests/msix/Assets/Square150x150Logo.png", dest = "/usr/share/pixmaps/pairee.png", mode = "644" },
]

[build-dependencies]
embed-resource = "2.5"

[workspace]

